--- a/oci-11/app/simpleapi-deployment.yaml
+++ b/oci-11/app/simpleapi-deployment.yaml
@@ -1,19 +1,16 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: simpleapi
-  labels:
-    app: simpleapi
 spec:
-  replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: simpleapi
+  replicas: 2
   template:
     metadata:
       labels:
         app: simpleapi
-        env: dev
     spec:
       containers:
         - name: simpleapi
@@ -25,16 +22,3 @@ spec:
             protocol: TCP
       imagePullSecrets:
         - name: ocirsecret
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: simpleapi-service
-  labels:
-    app: simpleapi
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-  selector:
-    app: simpleapi
